tests/consteval_diag_error_at_span_of.stderr
tests/consteval_diag_error_at_span_of.sl:7:36: SL2075: consteval error: anchored
